--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand" href="#">Heddy Cahya Firdaus</a>
+        <a class="navbar-brand" href="#">Heddy dan Omdy</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -83,7 +83,7 @@
         <div class="col-lg-5">
           <h2>You <span>Work</span> Like at <span>Home</span></h2>
           <p>Bekerja dengan suasana hati yang lebih asik mempelajari hal baru setiap harinya.</p>
-          <a href="#" class="btn btn-success tombol">Gallery</a>
+          <a href="#" class="btn btn-danger tombol">Gallery</a>
         </div>
       </div>
       <!-- akhir Workingspace -->
